--- a/index.html
+++ b/index.html
@@ -1,12 +1,185 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="page-header">
+      <nav class="navigation">
+        <a class="navigation-logo" href="#">
+          <img class="page-header-logo" src="" alt="логотип города Седона" />
+        </a>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-current" href="#"
+              >Главная</a
+            >
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-current" href="#"
+              ><span class="visually-hidden">Поиск</span></a
+            >
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#"
+              ><span class="visually-hidden">Реакция</span></a
+            >
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link button" href="#">Хочу сюда</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-index">
+      <section class="hero">
+        <h1 class="visually-hidden">Турестический город Седона</h1>
+        <img class="hero-logo" src="" alt="Wellcome to Sedona" />
+        <img class="hero-img" src="" alt="Природа Седоны" />
+      </section>
+      <section class="advantages">
+        <h2 class="advantages-title">
+          Седона — небольшой городок в Аризоне, заслуживающий большего!
+        </h2>
+        <p class="advantages-description">
+          Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+        </p>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-subtitle">Настоящий городок</h3>
+            <p class="advantages-item-text">
+              Все достопримечательности находятся очень близко
+            </p>
+          </li>
+          <li class="advantages-item">
+            <img
+              class="advantages-item-img"
+              src=""
+              alt="Фотография города Седоны"
+            />
+            <span class="visually-hidden">Фотография города Седоны</span>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-subtitle">Небольшая площадь</h3>
+            <p class="advantages-item-text">
+              Все достопримечательности находятся очень близко
+            </p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-subtitle">Красивая дорога</h3>
+            <p class="advantages-item-text">
+              Ехать в Седону из Лас-Вегаса совсем не скучно!
+            </p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-subtitle">Мало туристов</h3>
+            <p class="advantages-item-text">
+              Большинство едет в Гранд Каньон и толпится там
+            </p>
+          </li>
+          <li class="advantages-item">
+            <img
+              class="advantages-item-img"
+              src=""
+              alt="Фотография природы Седона"
+            />
+            <span class="visually-hidden">Фотография природы Седона</span>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-subtitle">Там есть мост дьявола</h3>
+            <p class="advantages-item-text">
+              Да, по нему можно пройти! Если вы осмелитесь, разумеется
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="service">
+        <h2 class="service-title">
+          Приезжайте в Седону отдохнуть в комфорте и уюте!
+        </h2>
+        <p class="service-description">
+          Опытный персонал и качественное обслуживание!
+        </p>
+        <ul class="service-list">
+          <li class="service-item">
+            <img class="service-icon" src="" alt="значок дома" />
+            <h3 class="service-item-title">Жильё</h3>
+            <p class="service-item-text">
+              Рекомендуем пожить в настоящем мотеле, всё как в кино!
+            </p>
+          </li>
+          <li class="service-item">
+            <img class="service-icon" src="" alt="значок еды" />
+            <h3 class="service-item-title">Еда</h3>
+            <p class="service-item-text">
+              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+            </p>
+          </li>
+          <li class="service-item">
+            <img class="service-icon" src="" alt="значок сувенира" />
+            <h3 class="service-item-title">Сувениры</h3>
+            <p class="service-item-text">
+              Не только китайского, но и настоящего местного производства!
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="rent">
+        <h2 class="rent-title">Заинтересовались?</h2>
+        <p class="rent-description">
+          Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+          предложения гостиниц в Седоне
+        </p>
+        <a class="button rent-link" href="">поиск гостиницы в седоне</a>
+      </section>
+      <section class="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-text">
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
+        <form
+          class="subscribe-form"
+          action="https://echo.htmlacademy.ru/"
+          method="post"
+        >
+          <input type="email" name="email" placeholder="Ваш e-mail" />
+          <button class="button" type="submit">Подписаться</button>
+        </form>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <h2 class="visually-hidden">Контакты</h2>
+      <ul class="footer-social-list">
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="#">
+            <span class="visually-hidden">VK</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="#">
+            <span class="visually-hidden">Telegram</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="footer-social-link" href="#">
+            <span class="visually-hidden">YouTube</span>
+          </a>
+        </li>
+      </ul>
+      <a class="phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a href="">
+        <img class="htmlacademy-link" src="" alt="Логотип HTMLAcademy" />
+      </a>
+    </footer>
   </body>
 </html>
