Исправил некоторые ошибки

--- a/catolog.html
+++ b/catolog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charsetКотолог="UTF-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Католог</title>
   </head>
@@ -47,7 +47,7 @@
         <ul class="breadcrumbs">
           <li class="breadcrumb-item">
             <span class="visually-hidden">Главная</span>
-            <a href="" class="breadcrumb-link"
+            <a href="index.html" class="breadcrumb-link"
               ><img class="breadcrumb-img" src="" alt=""
             /></a>
           </li>
@@ -56,6 +56,7 @@
           </li>
         </ul>
       </header>
+      <section class="catalog-hotel"></section>
 
       <section class="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
