--- a/catolog.html
+++ b/catolog.html
@@ -7,21 +7,21 @@
   </head>
   <body>
     <header class="page-header">
+      <a class="navigation-logo" href="#">
+        <img class="page-header-logo" src="" alt="логотип города Седона" />
+      </a>
       <nav class="navigation">
-        <a class="navigation-logo" href="#">
-          <img class="page-header-logo" src="" alt="логотип города Седона" />
-        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="#"
-              >Главная</a
-            >
+            <a class="navigation-link" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Гостиницы</a>
+            <a class="navigation-link navigation-link-current" href="#"
+              >Гостиницы</a
+            >
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
@@ -36,7 +36,7 @@
             >
           </li>
           <li class="navigation-item">
-            <a class="navigation-link button" href="#">Хочу сюда</a>
+            <a class="navigation-link nav-button" href="#">Хочу сюда</a>
           </li>
         </ul>
       </nav>
@@ -48,7 +48,7 @@
           <li class="breadcrumb-item">
             <span class="visually-hidden">Главная</span>
             <a href="index.html" class="breadcrumb-link"
-              ><img class="breadcrumb-img" src="" alt=""
+              ><img class="breadcrumb-img" src="" alt="иконка главной страницы"
             /></a>
           </li>
           <li class="breadcrumb-item">
@@ -56,7 +56,189 @@
           </li>
         </ul>
       </header>
-      <section class="catalog-hotel"></section>
+      <section class="catalog-hotels">
+        <h2 visually-hidden>Список гостиниц с фильтрами</h2>
+        <form
+          class="catalog-filter"
+          action="https://echo.htmlacademy.ru/"
+          method="get"
+        >
+          <fieldset class="catalog-filter-group">
+            <legend class="catalog-filter-title">Инфраструктура:</legend>
+            <ul class="catalog-filter-list">
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input
+                    type="checkbox"
+                    class="control-input"
+                    name="pool"
+                    checked
+                  />Бассейн
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input
+                    type="checkbox"
+                    class="control-input"
+                    name="parking"
+                    checked
+                  />Парковка
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input
+                    type="checkbox"
+                    class="control-input"
+                    name="wifi"
+                  />Wi-Fi
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <fieldset class="catalog-filter-group">
+            <legend class="catalog-filter-title">Тип жилья:</legend>
+            <ul class="catalog-filter-list">
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input
+                    type="radio"
+                    class="control-input"
+                    name="type-of-house"
+                    checked
+                  />Бассейн
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input
+                    type="radio"
+                    class="control-input"
+                    name="type-of-house"
+                  />Парковка
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input
+                    type="radio"
+                    class="control-input"
+                    name="type-of-house"
+                  />Wi-Fi
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <button class="filter-button" type="submit">Показать</button>
+          <button class="filter-button" type="reset">Сбросить</button>
+        </form>
+        <p>Найдено гостиниц: <span class="filter-result">38</span></p>
+        <select class="control-filter" aria-label="Сортировка">
+          <option value="popular">Сначала популярное</option>
+          <option value="cheap">Сначала дешёвое</option>
+          <option value="expensive">Сначала дорогое</option>
+        </select>
+        <a href="#" class="button button-light">
+          <span class="visually-hidden">Показать карточки</span>
+        </a>
+        <a href="#" class="button">
+          <span class="visually-hidden">Показать весь экран</span>
+        </a>
+        <a href="#" class="button">
+          <span class="visually-hidden">Показать список</span>
+        </a>
+        <ul class="hotel-list">
+          <li class="hotel-item">
+            <img src="" alt="Отель Amara Resort & Spa" />
+            <h3 class="hotel-item-title">Amara Resort & Spa</h3>
+            <span>Гостиница</span>
+            <span class="hotel-item-price">От 4000 ₽</span>
+            <a href="" class="button">подробнее</a>
+            <button class="button" type="button">в избранное</button>
+            <div class="star-rating">
+              <img src="" alt="иконки звезды" />
+              <img src="" alt="иконки звезды" /><img
+                src=""
+                alt="иконки звезды"
+              /><img src="" alt="иконки звезды" /><img
+                src=""
+                alt="иконки звезды"
+              />
+            </div>
+            <p class="hotel-rating">Рейтинг: 8,5</p>
+          </li>
+          <li class="hotel-item">
+            <img src="" alt="Отель Villas at Poco Diablo" />
+            <h3 class="hotel-item-title">Villas at Poco Diablo</h3>
+            <span>Гостиница</span>
+            <span class="hotel-item-price">От 5000 ₽</span>
+            <a href="" class="button">подробнее</a>
+            <button class="button" type="button">в избранное</button>
+            <div class="star-rating">
+              <img src="" alt="иконки звезды" />
+              <img src="" alt="иконки звезды" /><img
+                src=""
+                alt="иконки звезды"
+              /><img src="" alt="иконки звезды" /><img
+                src=""
+                alt="иконки звезды"
+              />
+            </div>
+            <p class="hotel-rating">Рейтинг: 9,2</p>
+          </li>
+          <li class="hotel-item">
+            <img src="" alt="Отель Desert Quail Inn" />
+            <h3 class="hotel-item-title">Desert Quail Inn</h3>
+            <span>Гостиница</span>
+            <span class="hotel-item-price">От 2500 ₽</span>
+            <a href="" class="button">подробнее</a>
+            <button class="button" type="button">в избранное</button>
+            <div class="star-rating">
+              <img src="" alt="иконки звезды" />
+              <img src="" alt="иконки звезды" />
+              <img src="" alt="иконки звезды" />
+            </div>
+            <p class="hotel-rating">Рейтинг: 6,9</p>
+          </li>
+          <li class="hotel-item">
+            <img src="" alt="GreenTree Inn" />
+            <h3 class="hotel-item-title">GreenTree Inn</h3>
+            <span>Гостиница</span>
+            <span class="hotel-item-price">От 1500 ₽</span>
+            <a href="" class="button">подробнее</a>
+            <button class="button" type="button">в избранное</button>
+            <div class="star-rating">
+              <img src="" alt="иконки звезды" />
+              <img src="" alt="иконки звезды" />
+            </div>
+            <p class="hotel-rating">Рейтинг: 5,0</p>
+          </li>
+        </ul>
+
+        <ul class="pagination">
+          <li class="pagination-item">
+            <a class="pagination-link pagination-current">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">4</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link ellipsis-button">...</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">5</a>
+          </li>
+        </ul>
+      </section>
 
       <section class="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
@@ -69,7 +251,7 @@
           method="post"
         >
           <input type="email" name="email" placeholder="Ваш e-mail" />
-          <button class="button" type="submit">Подписаться</button>
+          <button class="subscribe-button" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
