--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <header class="page-header">
+      <a class="navigation-logo" href="#">
+        <img class="page-header-logo" src="" alt="логотип города Седона" />
+      </a>
       <nav class="navigation">
-        <a class="navigation-logo" href="#">
-          <img class="page-header-logo" src="" alt="логотип города Седона" />
-        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link navigation-link-current" href="#"
@@ -21,7 +21,7 @@
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Гостиницы</a>
+            <a class="navigation-link" href="catolog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
@@ -36,7 +36,7 @@
             >
           </li>
           <li class="navigation-item">
-            <a class="navigation-link button" href="#">Хочу сюда</a>
+            <a class="navigation-link nav-button" href="#">Хочу сюда</a>
           </li>
         </ul>
       </nav>
@@ -140,7 +140,7 @@
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие
           предложения гостиниц в Седоне
         </p>
-        <a class="button rent-link" href="">поиск гостиницы в седоне</a>
+        <a class="rent-button rent-link" href="">поиск гостиницы в седоне</a>
       </section>
       <section class="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
@@ -153,7 +153,7 @@
           method="post"
         >
           <input type="email" name="email" placeholder="Ваш e-mail" />
-          <button class="button" type="submit">Подписаться</button>
+          <button class="subscribe-button" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
