--- a/catolog.html
+++ b/catolog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="navigation-logo" href="#">
+      <a class="navigation-logo" href="index.html">
         <img class="page-header-logo" src="" alt="логотип города Седона" />
       </a>
       <nav class="navigation">
@@ -141,15 +141,15 @@
           <option value="cheap">Сначала дешёвое</option>
           <option value="expensive">Сначала дорогое</option>
         </select>
-        <a href="#" class="button button-light">
+        <button type="button" class="hotel-view-button-grid active">
           <span class="visually-hidden">Показать карточки</span>
-        </a>
-        <a href="#" class="button">
+        </button>
+        <button type="button" class="hotel-view-button-fullscreen">
           <span class="visually-hidden">Показать весь экран</span>
-        </a>
-        <a href="#" class="button">
+        </button>
+        <button type="button" class="hotel-view-button-list">
           <span class="visually-hidden">Показать список</span>
-        </a>
+        </button>
         <ul class="hotel-list">
           <li class="hotel-item">
             <img src="" alt="Отель Amara Resort & Spa" />
@@ -218,7 +218,7 @@
           </li>
         </ul>
 
-        <ul class="pagination">
+        <ol class="pagination">
           <li class="pagination-item">
             <a class="pagination-link pagination-current">1</a>
           </li>
@@ -237,7 +237,7 @@
           <li class="pagination-item">
             <a class="pagination-link" href="#">5</a>
           </li>
-        </ul>
+        </ol>
       </section>
 
       <section class="subscribe">
