--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -48,9 +48,10 @@
         <img class="hero-img" src="" alt="Природа Седоны" />
       </section>
       <section class="advantages">
-        <h2 class="advantages-title">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <p class="advantages-lead">
           Седона — небольшой городок в Аризоне, заслуживающий большего!
-        </h2>
+        </p>
         <p class="advantages-description">
           Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
         </p>
