--- a/catolog.html
+++ b/catolog.html
@@ -8,7 +8,13 @@
   <body>
     <header class="page-header">
       <a class="navigation-logo" href="index.html">
-        <img class="page-header-logo" src="" alt="логотип города Седона" />
+        <img
+          class="page-header-logo"
+          src="images/header-icons/logo.svg"
+          alt="логотип сайта"
+          width="140"
+          height="70"
+        />
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -26,14 +32,24 @@
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="#"
-              ><span class="visually-hidden">Поиск</span></a
-            >
+            <a class="navigation-link navigation-link-current" href="#">
+              <span class="visually-hidden">Поиск</span>
+              <img
+                src="images/header-icons/search.svg"
+                alt="иконка поиска"
+                width="18"
+                height="18"
+            /></a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#"
-              ><span class="visually-hidden">Реакция</span></a
-            >
+              ><span class="visually-hidden">Реакция</span>
+              <img
+                src="images/header-icons/heart.svg"
+                alt="иконка сердечки"
+                width="18"
+                height="17"
+            /></a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link nav-button" href="#">Хочу сюда</a>
@@ -48,8 +64,21 @@
           <li class="breadcrumb-item">
             <span class="visually-hidden">Главная</span>
             <a href="index.html" class="breadcrumb-link"
-              ><img class="breadcrumb-img" src="" alt="иконка главной страницы"
+              ><img
+                class="breadcrumb-img"
+                src="images/breadcrumb-icons/breadcrumb-icon-1.svg"
+                alt="иконка главной страницы"
+                width="12"
+                height="12"
             /></a>
+          </li>
+          <li class="breadcrumb-item">
+            <img
+              src="images/breadcrumb-icons/breadcrumb-icon-2.svg"
+              alt="иконка стрелки"
+              width="7"
+              height="10"
+            />
           </li>
           <li class="breadcrumb-item">
             <a href="#" class="breadcrumb-link">Гостиницы</a>
@@ -57,7 +86,8 @@
         </ul>
       </header>
       <section class="catalog-hotels">
-        <h2 visually-hidden>Список гостиниц с фильтрами</h2>
+        <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
+
         <form
           class="catalog-filter"
           action="https://echo.htmlacademy.ru/"
@@ -152,67 +182,142 @@
         </button>
         <ul class="hotel-list">
           <li class="hotel-item">
-            <img src="" alt="Отель Amara Resort & Spa" />
+            <img
+              src="images/hotels-images/hotel-1.jpg"
+              alt="Отель Amara Resort & Spa"
+              width="300"
+              height="212"
+            />
             <h3 class="hotel-item-title">Amara Resort & Spa</h3>
             <span>Гостиница</span>
             <span class="hotel-item-price">От 4000 ₽</span>
             <a href="" class="button">подробнее</a>
             <button class="button" type="button">в избранное</button>
             <div class="star-rating">
-              <img src="" alt="иконки звезды" />
-              <img src="" alt="иконки звезды" /><img
-                src=""
+              <img
+                src="images/star.svg"
                 alt="иконки звезды"
-              /><img src="" alt="иконки звезды" /><img
-                src=""
+                width="18"
+                height="17"
+              />
+              <img
+                src="images/star.svg"
                 alt="иконки звезды"
+                width="18"
+                height="17"
+              /><img
+                src="images/star.svg"
+                alt="иконки звезды"
+                width="18"
+                height="17"
+              /><img
+                src="images/star.svg"
+                alt="иконки звезды"
+                width="18"
+                height="17"
               />
             </div>
             <p class="hotel-rating">Рейтинг: 8,5</p>
           </li>
           <li class="hotel-item">
-            <img src="" alt="Отель Villas at Poco Diablo" />
+            <img
+              src="images/hotels-images/hotel-2.jpg"
+              alt="Отель Villas at Poco Diablo"
+              width="300"
+              height="212"
+            />
             <h3 class="hotel-item-title">Villas at Poco Diablo</h3>
             <span>Гостиница</span>
             <span class="hotel-item-price">От 5000 ₽</span>
             <a href="" class="button">подробнее</a>
             <button class="button" type="button">в избранное</button>
             <div class="star-rating">
-              <img src="" alt="иконки звезды" />
-              <img src="" alt="иконки звезды" /><img
-                src=""
+              <img
+                src="images/star.svg"
                 alt="иконки звезды"
-              /><img src="" alt="иконки звезды" /><img
-                src=""
+                width="18"
+                height="17"
+              />
+              <img
+                src="images/star.svg"
                 alt="иконки звезды"
+                width="18"
+                height="17"
+              />
+              <img
+                src="images/star.svg"
+                alt="иконки звезды"
+                width="18"
+                height="17"
+              />
+              <img
+                src="images/star.svg"
+                alt="иконки звезды"
+                width="18"
+                height="17"
               />
             </div>
             <p class="hotel-rating">Рейтинг: 9,2</p>
           </li>
           <li class="hotel-item">
-            <img src="" alt="Отель Desert Quail Inn" />
+            <img
+              src="images/hotels-images/hotel-3.jpg"
+              alt="Отель Desert Quail Inn"
+              width="300"
+              height="212"
+            />
             <h3 class="hotel-item-title">Desert Quail Inn</h3>
             <span>Гостиница</span>
             <span class="hotel-item-price">От 2500 ₽</span>
             <a href="" class="button">подробнее</a>
             <button class="button" type="button">в избранное</button>
             <div class="star-rating">
-              <img src="" alt="иконки звезды" />
-              <img src="" alt="иконки звезды" />
-              <img src="" alt="иконки звезды" />
+              <img
+                src="images/star.svg"
+                alt="иконки звезды"
+                width="18"
+                height="17"
+              />
+              <img
+                src="images/star.svg"
+                alt="иконки звезды"
+                width="18"
+                height="17"
+              />
+              <img
+                src="images/star.svg"
+                alt="иконки звезды"
+                width="18"
+                height="17"
+              />
             </div>
             <p class="hotel-rating">Рейтинг: 6,9</p>
           </li>
           <li class="hotel-item">
-            <img src="" alt="GreenTree Inn" />
+            <img
+              src="images/hotels-images/hotel-4.jpg"
+              alt="GreenTree Inn"
+              width="300"
+              height="212"
+            />
             <h3 class="hotel-item-title">GreenTree Inn</h3>
             <span>Гостиница</span>
             <span class="hotel-item-price">От 1500 ₽</span>
             <a href="" class="button">подробнее</a>
             <button class="button" type="button">в избранное</button>
             <div class="star-rating">
-              <img src="" alt="иконки звезды" />
-              <img src="" alt="иконки звезды" />
+              <img
+                src="images/star.svg"
+                alt="иконки звезды"
+                width="18"
+                height="17"
+              />
+              <img
+                src="images/star.svg"
+                alt="иконки звезды"
+                width="18"
+                height="17"
+              />
             </div>
             <p class="hotel-rating">Рейтинг: 5,0</p>
           </li>
@@ -235,7 +340,7 @@
             <a class="pagination-link ellipsis-button">...</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link" href="#">5</a>
+            <a class="pagination-link" href="#">10</a>
           </li>
         </ol>
       </section>
@@ -261,22 +366,46 @@
         <li class="footer-social-item">
           <a class="footer-social-link" href="#">
             <span class="visually-hidden">VK</span>
+            <img
+              src="images/social-icons/social-vk.svg"
+              alt="иконка вк"
+              width="24"
+              height="14"
+            />
           </a>
         </li>
         <li class="footer-social-item">
           <a class="footer-social-link" href="#">
             <span class="visually-hidden">Telegram</span>
+            <img
+              src="images/social-icons/social-telegram.svg"
+              alt="иконка телеграм"
+              width="24"
+              height="14"
+            />
           </a>
         </li>
         <li class="footer-social-item">
           <a class="footer-social-link" href="#">
             <span class="visually-hidden">YouTube</span>
+            <img
+              src="images/social-icons/social-youtube.svg"
+              alt="иконка ютуб"
+              width="24"
+              height="14"
+            />
           </a>
         </li>
       </ul>
       <a class="phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a href="">
-        <img class="htmlacademy-link" src="" alt="Логотип HTMLAcademy" />
+        <img
+          class="htmlacademy-link"
+          src="images/htmlacademy-logo.svg"
+          alt="Логотип HTMLAcademy"
+          width="115"
+          height="33"
+        />
       </a>
     </footer>
   </body>
