--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   <body>
     <header class="page-header">
       <a class="navigation-logo" href="#">
-        <img class="page-header-logo" src="" alt="логотип города Седона" />
+        <img
+          class="page-header-logo"
+          src="images/header-icons/logo.svg"
+          alt="логотип сайта"
+          width="140"
+          height="70"
+        />
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -27,13 +33,25 @@
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link navigation-link-current" href="#"
-              ><span class="visually-hidden">Поиск</span></a
-            >
+              ><span class="visually-hidden">Поиск</span>
+              <img
+                src="images/header-icons/search.svg"
+                alt="иконка поиска"
+                width="18"
+                height="18"
+              />
+            </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#"
-              ><span class="visually-hidden">Реакция</span></a
-            >
+              ><span class="visually-hidden">Реакция</span
+              ><img
+                src="images/header-icons/heart.svg"
+                alt="иконка сердечки"
+                width="18"
+                height="17"
+              />
+            </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link nav-button" href="#">Хочу сюда</a>
@@ -44,8 +62,20 @@
     <main class="main-index">
       <section class="hero">
         <h1 class="visually-hidden">Турестический город Седона</h1>
-        <img class="hero-logo" src="" alt="Wellcome to Sedona" />
-        <img class="hero-img" src="" alt="Природа Седоны" />
+        <img
+          class="hero-logo"
+          src="images/hero-welcome.svg"
+          alt="Wellcome to Sedona"
+          width="458"
+          height="352"
+        />
+        <img
+          class="hero-img"
+          src="images/hero-img.jpg"
+          alt="Природа Седоны"
+          width="1200"
+          height="485"
+        />
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
@@ -65,8 +95,10 @@
           <li class="advantages-item">
             <img
               class="advantages-item-img"
-              src=""
+              src="images/advantages-photo/advantages-photo-1.jpg"
               alt="Фотография города Седоны"
+              width="800"
+              height="385"
             />
             <span class="visually-hidden">Фотография города Седоны</span>
           </li>
@@ -91,8 +123,10 @@
           <li class="advantages-item">
             <img
               class="advantages-item-img"
-              src=""
+              src="images/advantages-photo/advantages-photo-2.jpg"
               alt="Фотография природы Седона"
+              width="800"
+              height="385"
             />
             <span class="visually-hidden">Фотография природы Седона</span>
           </li>
@@ -113,21 +147,39 @@
         </p>
         <ul class="service-list">
           <li class="service-item">
-            <img class="service-icon" src="" alt="значок дома" />
+            <img
+              class="service-icon"
+              src="images/service-icons/service-icon-1.svg"
+              alt="значок дома"
+              width="75"
+              height="72"
+            />
             <h3 class="service-item-title">Жильё</h3>
             <p class="service-item-text">
               Рекомендуем пожить в настоящем мотеле, всё как в кино!
             </p>
           </li>
           <li class="service-item">
-            <img class="service-icon" src="" alt="значок еды" />
+            <img
+              class="service-icon"
+              src="images/service-icons/service-icon-2.svg"
+              alt="значок еды"
+              width="75"
+              height="72"
+            />
             <h3 class="service-item-title">Еда</h3>
             <p class="service-item-text">
               Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
             </p>
           </li>
           <li class="service-item">
-            <img class="service-icon" src="" alt="значок сувенира" />
+            <img
+              class="service-icon"
+              src="images/service-icons/service-icon-3.svg"
+              alt="значок сувенира"
+              width="75"
+              height="72"
+            />
             <h3 class="service-item-title">Сувениры</h3>
             <p class="service-item-text">
               Не только китайского, но и настоящего местного производства!
@@ -164,22 +216,46 @@
         <li class="footer-social-item">
           <a class="footer-social-link" href="#">
             <span class="visually-hidden">VK</span>
+            <img
+              src="images/social-icons/social-vk.svg"
+              alt="иконка вк"
+              width="24"
+              height="14"
+            />
           </a>
         </li>
         <li class="footer-social-item">
           <a class="footer-social-link" href="#">
             <span class="visually-hidden">Telegram</span>
+            <img
+              src="images/social-icons/social-telegram.svg"
+              alt="иконка телеграм"
+              width="24"
+              height="14"
+            />
           </a>
         </li>
         <li class="footer-social-item">
           <a class="footer-social-link" href="#">
             <span class="visually-hidden">YouTube</span>
+            <img
+              src="images/social-icons/social-youtube.svg"
+              alt="иконка ютуб"
+              width="24"
+              height="14"
+            />
           </a>
         </li>
       </ul>
       <a class="phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a href="">
-        <img class="htmlacademy-link" src="" alt="Логотип HTMLAcademy" />
+        <img
+          class="htmlacademy-link"
+          src="images/htmlacademy-logo.svg"
+          alt="Логотип HTMLAcademy"
+          width="115"
+          height="33"
+        />
       </a>
     </footer>
   </body>
