--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>HTML Academy: Седона</title>
   </head>
   <body>
@@ -223,12 +224,12 @@
         <li class="footer-social-item">
           <a class="footer-social-link" href="#">
             <span class="visually-hidden">VK</span>
-            <img
+            <!-- <img
               src="images/social-icons/social-vk.svg"
               alt="иконка вк"
               width="24"
               height="14"
-            />
+            /> -->
           </a>
         </li>
         <li class="footer-social-item">
