--- a/index.html
+++ b/index.html
@@ -144,9 +144,10 @@
       </section>
       <!-- Секшен услуги -->
       <section class="service">
-        <h2 class="service-title">
+        <h2 class="visually-hidden">Услуги</h2>
+        <p class="service-lead">
           Приезжайте в Седону отдохнуть в комфорте и уюте!
-        </h2>
+        </p>
         <p class="service-description">
           Опытный персонал и качественное обслуживание!
         </p>
@@ -193,17 +194,21 @@
         </ul>
       </section>
       <!-- Секшен предложение -->
-      <section class="rent">
-        <h2 class="rent-title">Заинтересовались?</h2>
-        <p class="rent-description">
+      <section class="proposal">
+        <h2 class="visually-hidden">Предложение</h2>
+        <p class="proposal-lead">Заинтересовались?</p>
+        <p class="proposal-description">
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие
           предложения гостиниц в Седоне
         </p>
-        <a class="rent-button rent-link" href="">поиск гостиницы в седоне</a>
+        <button class="proposal-button" type="button">
+          поиск гостиницы в седоне
+        </button>
       </section>
       <!-- Секшен подписка -->
       <section class="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <h2 class="visually-hidden">Подписка</h2>
+        <p class="subscribe-lead">Подпишитесь на рассылку</p>
         <p class="subscribe-text">
           Только полезная информация и никакого спама, честное бойскаутское!
         </p>
@@ -224,46 +229,46 @@
         <li class="footer-social-item">
           <a class="footer-social-link" href="#">
             <span class="visually-hidden">VK</span>
-            <!-- <img
+            <img
               src="images/social-icons/social-vk.svg"
               alt="иконка вк"
               width="24"
               height="14"
-            /> -->
+            />
           </a>
         </li>
         <li class="footer-social-item">
           <a class="footer-social-link" href="#">
             <span class="visually-hidden">Telegram</span>
-            <!-- <img
+            <img
               src="images/social-icons/social-telegram.svg"
               alt="иконка телеграм"
               width="24"
               height="14"
-            /> -->
+            />
           </a>
         </li>
         <li class="footer-social-item">
           <a class="footer-social-link" href="#">
             <span class="visually-hidden">YouTube</span>
-            <!-- <img
+            <img
               src="images/social-icons/social-youtube.svg"
               alt="иконка ютуб"
               width="24"
               height="14"
-            /> -->
+            />
           </a>
         </li>
       </ul>
       <a class="phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a class="footer-htmlacademy-link" href="https://htmlacademy.ru">
-        <!-- <img
+        <img
           class="htmlacademy-link"
           src="images/htmlacademy-logo.svg"
           alt="Логотип HTMLAcademy"
           width="115"
           height="33"
-        /> -->
+        />
       </a>
     </footer>
   </body>
