Сетки компонентов на флексах(index.html)

--- a/catolog.html
+++ b/catolog.html
@@ -62,7 +62,7 @@
           </ul>
         </nav>
       </header>
-      <main>
+      <main class="main-catalog main-container">
         <!-- КАТАЛОГ ХИРОУ -->
         <div class="catalog-hiro">
           <header class="inner-header">
@@ -252,8 +252,10 @@
                 <span class="hotel-item-price">От 4000 ₽</span>
               </div>
               <div class="hotel-item-wrapper">
-                <a href="" class="button">подробнее</a>
-                <button class="button" type="button">в избранное</button>
+                <a href="" class="hotel-button-link button">подробнее</a>
+                <button class="hotel-button button" type="button">
+                  в избранное
+                </button>
               </div>
               <div class="hotel-item-wrapper">
                 <div class="star-rating">
@@ -296,8 +298,10 @@
                 <span class="hotel-item-price">От 5000 ₽</span>
               </div>
               <div class="hotel-item-wrapper">
-                <a href="" class="button">подробнее</a>
-                <button class="button" type="button">в избранное</button>
+                <a href="" class="hotel-button-link button">подробнее</a>
+                <button class="hotel-button button hotel-chosed" type="button">
+                  в избранное
+                </button>
               </div>
               <div class="hotel-item-wrapper">
                 <div class="star-rating">
@@ -342,8 +346,10 @@
                 <span class="hotel-item-price">От 2500 ₽</span>
               </div>
               <div class="hotel-item-wrapper">
-                <a href="" class="button">подробнее</a>
-                <button class="button" type="button">в избранное</button>
+                <a href="" class="hotel-button-link button">подробнее</a>
+                <button class="hotel-button button" type="button">
+                  в избранное
+                </button>
               </div>
               <div class="hotel-item-wrapper">
                 <div class="star-rating">
@@ -382,8 +388,10 @@
                 <span class="hotel-item-price">От 1500 ₽</span>
               </div>
               <div class="hotel-item-wrapper">
-                <a href="" class="button">подробнее</a>
-                <button class="button" type="button">в избранное</button>
+                <a href="" class="hotel-button-link button">подробнее</a>
+                <button class="hotel-button button" type="button">
+                  в избранное
+                </button>
               </div>
               <div class="hotel-item-wrapper">
                 <div class="star-rating">
