--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link nav-button" href="#">Хочу сюда</a>
+              <a class="navigation-link nav-button" href="#">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
@@ -87,6 +87,7 @@
             <li class="advantages-item advantages-item-info">
               <div class="advantages-item-wrap">
                 <h3 class="advantages-subtitle">Настоящий городок</h3>
+                <span></span>
                 <p class="advantages-item-text">
                   Седона — не аттракцион для туристов, там течёт своя жизнь
                 </p>
@@ -105,6 +106,7 @@
             <li class="advantages-item advantages-item-info">
               <div class="advantages-item-wrap">
                 <h3 class="advantages-subtitle">Небольшая площадь</h3>
+                <span></span>
                 <p class="advantages-item-text">
                   Все достопримечательности находятся очень близко
                 </p>
@@ -113,6 +115,7 @@
             <li class="advantages-item advantages-item-info">
               <div class="advantages-item-wrap">
                 <h3 class="advantages-subtitle">Красивая дорога</h3>
+                <span></span>
                 <p class="advantages-item-text">
                   Ехать в Седону из Лас-Вегаса совсем не скучно!
                 </p>
@@ -121,6 +124,7 @@
             <li class="advantages-item advantages-item-info">
               <div class="advantages-item-wrap">
                 <h3 class="advantages-subtitle">Мало туристов</h3>
+                <span></span>
                 <p class="advantages-item-text">
                   Большинство едет в Гранд Каньон и толпится там
                 </p>
@@ -138,7 +142,8 @@
             </li>
             <li class="advantages-item advantages-item-info">
               <div class="advantages-item-wrap">
-                <h3 class="advantages-subtitle">Там есть мост дьявола</h3>
+                <h3 class="advantages-subtitle">Там есть<br />мост дьявола</h3>
+                <span></span>
                 <p class="advantages-item-text">
                   Да, по нему можно пройти! Если вы осмелитесь, разумеется
                 </p>
@@ -166,7 +171,8 @@
               />
               <h3 class="service-item-title">Жильё</h3>
               <p class="service-item-text">
-                Рекомендуем пожить в настоящем мотеле, всё как в кино!
+                Рекомендуем пожить<br />в настоящем мотеле,<br />
+                всё как в кино!
               </p>
             </li>
             <li class="service-item">
@@ -179,8 +185,8 @@
               />
               <h3 class="service-item-title">Еда</h3>
               <p class="service-item-text">
-                Всегда заказывайте топовый фирменный бургер, вы не
-                разочаруетесь!
+                Всегда заказывайте<br />
+                топовый фирменный бургер, вы не разочаруетесь!
               </p>
             </li>
             <li class="service-item">
@@ -193,7 +199,8 @@
               />
               <h3 class="service-item-title">Сувениры</h3>
               <p class="service-item-text">
-                Не только китайского, но и настоящего местного производства!
+                Не только китайского,<br />
+                но и настоящего местного производства!
               </p>
             </li>
           </ul>
@@ -204,11 +211,11 @@
             <h2 class="visually-hidden">Предложение</h2>
             <p class="proposal-lead">Заинтересовались?</p>
             <p class="proposal-description">
-              Укажите предполагаемые даты поездки, и мы покажем вам лучшие
-              предложения гостиниц в Седоне
+              Укажите предполагаемые даты поездки,<br />
+              и мы покажем вам лучшие предложения гостиниц в Седоне
             </p>
             <button class="proposal-button" type="button">
-              поиск гостиницы в седоне
+              ПОИСК ГОСТИНИЦЫ В седоне
             </button>
           </div>
         </section>
@@ -255,8 +262,8 @@
                 <img
                   src="images/social-icons/social-telegram.svg"
                   alt="иконка телеграм"
-                  width="24"
-                  height="14"
+                  width="18"
+                  height="15"
                 />
               </a>
             </li>
@@ -266,8 +273,8 @@
                 <img
                   src="images/social-icons/social-youtube.svg"
                   alt="иконка ютуб"
-                  width="24"
-                  height="14"
+                  width="22"
+                  height="17"
                 />
               </a>
             </li>
