Сетки компонентов на флексах(index.html & catalog.html)

--- a/catolog.html
+++ b/catolog.html
@@ -151,7 +151,7 @@
                             class="control-input"
                             name="type-of-house"
                             checked
-                          />Бассейн
+                          />Гостиница
                         </label>
                       </li>
                       <li class="catalog-filter-item">
@@ -160,7 +160,7 @@
                             type="radio"
                             class="control-input"
                             name="type-of-house"
-                          />Парковка
+                          />Мотель
                         </label>
                       </li>
                       <li class="catalog-filter-item">
@@ -169,7 +169,7 @@
                             type="radio"
                             class="control-input"
                             name="type-of-house"
-                          />Wi-Fi
+                          />Апартаменты
                         </label>
                       </li>
                     </ul>
@@ -178,7 +178,7 @@
                 <div class="catalog-filter-right-side">
                   <div>
                     <button class="filter-button" type="submit">
-                      Показать
+                      Применить
                     </button>
                     <button class="filter-button" type="reset">Сбросить</button>
                   </div>
@@ -194,8 +194,8 @@
               Найдено гостиниц: <span class="filter-result">38</span>
             </p>
             <select class="control-filter" aria-label="Сортировка">
-              <option value="popular">Сначала популярное</option>
-              <option value="cheap">Сначала дешёвое</option>
+              <option value="popular">Сначала дешёвое</option>
+              <option value="cheap">Сначала популярное</option>
               <option value="expensive">Сначала дорогое</option>
             </select>
             <ul class="hotel-button-list">
@@ -303,7 +303,7 @@
                   в избранное
                 </button>
               </div>
-              <div class="hotel-item-wrapper">
+              <div class="hotel-item-wrapper stars-wrapper">
                 <div class="star-rating">
                   <img
                     src="images/star.svg"
