--- a/index.html
+++ b/index.html
@@ -22,27 +22,33 @@
         <nav class="navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link navigation-link-current" href="#"
+              <a
+                class="navigation-link navigation-link-main navigation-link-current"
+                href="#"
                 >Главная</a
               >
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#">О Седоне</a>
+              <a class="navigation-link navigation-link-main" href="#"
+                >О Седоне</a
+              >
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="catolog.html">Гостиницы</a>
+              <a
+                class="navigation-link navigation-link-main"
+                href="catolog.html"
+                >Гостиницы</a
+              >
             </li>
           </ul>
           <ul class="navigation-list navigation-user">
             <li class="navigation-item">
-              <a
-                class="navigation-link navigation-link-current"
-                href="https://www.google.kz/?hl=ru"
+              <a class="navigation-link" href="#"
                 ><span class="visually-hidden">Поиск</span>
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="https://www.google.kz/?hl=ru"
+              <a class="navigation-link" href="#"
                 ><span class="visually-hidden">Реакция</span>
               </a>
               <span class="count-reaction">12</span>
@@ -240,6 +246,9 @@
               <a class="footer-social-link" href="#">
                 <span class="visually-hidden">VK</span>
                 <svg
+                  class="navigation-icon"
+                  aria-hidden="true"
+                  focusable="false"
                   width="25"
                   height="15"
                   viewBox="0 0 25 15"
@@ -262,6 +271,9 @@
               <a class="footer-social-link" href="#">
                 <span class="visually-hidden">Telegram</span>
                 <svg
+                  class="navigation-icon"
+                  aria-hidden="true"
+                  focusable="false"
                   width="18"
                   height="17"
                   viewBox="0 0 18 17"
@@ -282,6 +294,9 @@
               <a class="footer-social-link" href="#">
                 <span class="visually-hidden">YouTube</span>
                 <svg
+                  class="navigation-icon"
+                  aria-hidden="true"
+                  focusable="false"
                   width="23"
                   height="18"
                   viewBox="0 0 23 18"
@@ -302,6 +317,8 @@
           <a class="phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
           <a class="footer-htmlacademy-link" href="https://htmlacademy.ru">
             <svg
+              class="navigation-icon"
+              aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg"
               width="115"
               height="34"
