--- a/catolog.html
+++ b/catolog.html
@@ -22,38 +22,32 @@
         <nav class="navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link" href="index.html">Главная</a>
+              <a class="navigation-link navigation-link-main" href="index.html"
+                >Главная</a
+              >
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#">О Седоне</a>
+              <a class="navigation-link navigation-link-main" href="#"
+                >О Седоне</a
+              >
             </li>
             <li class="navigation-item">
-              <a class="navigation-link navigation-link-current" href="#"
+              <a
+                class="navigation-link navigation-link-main navigation-link-current"
+                href="#"
                 >Гостиницы</a
               >
             </li>
           </ul>
           <ul class="navigation-list navigation-user">
             <li class="navigation-item">
-              <a class="navigation-link navigation-link-current" href="#">
+              <a class="navigation-link" href="#">
                 <span class="visually-hidden">Поиск</span>
-                <!-- <img
-                  src="images/header-icons/search.svg"
-                  alt="иконка поиска"
-                  width="18"
-                  height="18"
-                /> -->
               </a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#"
                 ><span class="visually-hidden">Реакция</span>
-                <!-- <img
-                  src="images/header-icons/heart.svg"
-                  alt="иконка сердечки"
-                  width="18"
-                  height="17"
-                /> -->
               </a>
             </li>
             <li class="navigation-item">
@@ -72,13 +66,24 @@
                 <li class="breadcrumb-item">
                   <span class="visually-hidden">Главная</span>
                   <a href="index.html" class="breadcrumb-link">
-                    <img
-                      class="breadcrumb-img"
-                      src="images/breadcrumb-icons/breadcrumb-icon-1.svg"
-                      alt="иконка главной страницы"
-                      width="12"
-                      height="12"
-                    />
+                    <svg
+                      width="13"
+                      height="13"
+                      viewBox="0 0 13 13"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <g id="Vector">
+                        <path
+                          d="M6.5 0.5L0.5 6.30006V12.5001H12.5V6.30006L6.5 0.5ZM11.5 11.5001H1.5V6.70005L6.5 1.9L11.5 6.70005V11.5001Z"
+                          fill="white"
+                        />
+                        <path
+                          d="M4.5 10.5001H5.5V8.00005H7.5V10.5001H8.5V7.00005H4.5V10.5001Z"
+                          fill="white"
+                        />
+                      </g>
+                    </svg>
                   </a>
                 </li>
 
